sort by columns in grid

--- a/LocaleManager/LocaleManager.csproj
+++ b/LocaleManager/LocaleManager.csproj
@@ -84,6 +84,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Extensions\DataGridColumnExtensions.cs" />
     <Compile Include="Extensions\DependencyObjectExtensions.cs" />
     <Compile Include="Models\AddWindowData.cs" />
     <Compile Include="ValidationRules\RequiredRule.cs" />
